servicios/auth-service/app/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
        - name: auth-service
          image: auth-service:v1
          imagePullPolicy: Always  # Indica que NO intente descargar la imagen
          ports:
            - containerPort: 3000
